--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">A DIGITAL MARKETING &#38; <br> DESIGN AGENCY</h1>
-          <p class="animated fadeInUp">We love the Web and the work we do.We work closely with our </br> clients to deliver the best possible solutions for their needs</p>
+          <h1 class="animated fadeInUp">NUTRIÇÃO PERSONALIZADA<br>ATENDIMENTO DOMICILIAR</h1>
+          <!-- <p class="animated fadeInUp"> Isis Tande Phd</p> -->
         </div>
       </div>
     </div>
