--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: /
 <!-- Slider Start -->
 <section id="slider">
   <div class="container">
-    <div class="row">
+    <div class="row-fluid">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
           <h1 class="animated fadeInUp">NUTRIÇÃO PERSONALIZADA<br>ATENDIMENTO DOMICILIAR</h1>
@@ -19,20 +19,28 @@ permalink: /
 </section>
 <!-- Wrapper Start -->
 <section id="intro">
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row myrow">
       <div class="col-md-7 col-sm-12">
         <div class="block">
-          <div class="section-title">
-            <h2>About Us</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+          <div id="a-nutricionista" class="section-title">
+            <h2>A Nutricionista</h2>
+            <p>Isis é nutricionista e pesquisadora formada pela <a href="http://www.ufop.br/">Universidade Federal de Ouro Preto</a> e Doutora em nutrição e Saúde Pública pela <a href="http://www.fsp.usp.br/">Faculdade de Saúde Pública da Universidade de São Paulo</a></p>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+            <p>
+              Em seu doutorado, estudou a relação entre alimentação, obesidade, dislipidemia e risco cardiovascular em adolescentes.
+              Atuou como nutricionista de produção e clínica no <a href="http://www.hc.fm.usp.br/">Hospital das Clínicas de São Paulo</a> onde aprimorou seus conhecimentos sobre as principais patologias que se relacionam à nutrição (doenças renais, hepatopatias, cardiopatias, diabetes).
+              Isis também atuou como professora em cursos de especialização em nutrição e graduação em nutrição no Estado de São Paulo. Nestas experiências, orientou estágios no <a href="http://www.bp.org.br/">Hospital Beneficência Portuguesa de São Paulo</a> e no <a href="http://www.hut.org.br/">Hospital Universitário de Taubaté</a>, atuando no atendimento de pacientes em Terapia Nutricional.
+              Isis realiza atendimentos clínicos a domicílio e permanece vinculada à pesquisa. As evidências científicas constituem a base de sua conduta profissional.
+            </p>
+            <p>
+              Mais informações no <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4511453E8">Currículo Lattes</a> e no perfil <a href="https://www.researchgate.net/profile/Isis_Tande_da_Silva"> Research Gate</a>
+            </p>
         </div>
       </div><!-- .col-md-7 close -->
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
+          <img class="img-responsive center-block" src="img/wrapper-img.png" alt="Img">
         </div>
       </div><!-- .col-md-5 close -->
     </div>
@@ -56,65 +64,44 @@ permalink: /
 <section id="service">
   <div class="container">
     <div class="row">
-      <div class="section-title">
-        <h2>Our Services</h2>
+      <div id="servicos" class="section-title">
+        <h2>Serviços</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
-    <div class="row ">
-      <div class="col-sm-6 col-md-3">
+    <div class="row-fluid">
+      <div class="col-sm-2 col-md-2 col-md-offset-1">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
-          <h4>Branding</h4>
+          <i class="ion-android-contacts"></i>
+          <h4>Nutrição Infantil e Ambiente Escolar</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-3">
+      <div class="col-sm-2 col-md-2">
         <div class="service-item">
-          <i class="ion-compass"></i>
-          <h4>Web Design</h4>
+          <i class="ion-ios-people"></i>
+          <h4>Adequação Nutricional Adulto e Idoso</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-3">
+      <div class="col-sm-2 col-md-2">
         <div class="service-item">
-          <i class="ion-image"></i>
-          <h4>App Design</h4>
+          <i class="ion-ios-pulse"></i>
+          <h4>Nutrição Clínica</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-3">
+      <div class="col-sm-2 col-md-2">
         <div class="service-item">
-          <i class="ion-bug"></i>
-          <h4>Start Up</h4>
+          <i class="ion-ios-home"></i>
+          <h4>Instituição de cuidado ao idoso</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
-      <div class="col-sm-6 col-md-3">
+      <div class="col-sm-2 col-md-2">
         <div class="service-item">
-          <i class="ion-headphone"></i>
-          <h4>Logo Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="service-item">
-          <i class="ion-leaf"></i>
-          <h4>Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="service-item">
-          <i class="ion-planet"></i>
-          <h4>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="service-item">
-          <i class="ion-earth"></i>
-          <h4>Brand Identity</h4>
+          <i class="ion-ios-paper"></i>
+          <h4>Textos e Palestras</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
