--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS</h2>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <h2>HÁBITOS ALIMENTARES SAUDÁVEIS</h2>
+
+      <p>Consumir uma alimentação saudável durante o curso da vida ajuda a prevenir a desnutrição em todas as suas formas, bem como uma gama de doenças crônicas não transmissíveis e suas comorbidades. O aumento da produção de alimentos processados, a rápida urbanização e mudanças no estilo de vida levaram a uma mudança nos padrões alimentares. As pessoas estão consumindo mais alimentos ricos em calorias, gorduras, açúcares, sódio e muitos não consomem quantidades suficientes de frutas, legumes e fibras alimentares, como cereais integrais.</p>
+
+      <p>A composição exata de uma dieta diversificada, equilibrada e saudável variará em função das necessidades individuais (gênero, estilo de vida, nível de atividade física), contexto cultural, disponibilidade local de alimentos e hábitos alimentares.
+      </p>
+      <p>
+        <a href="http://www.who.int/mediacentre/factsheets/fs394/en/">Organização Mundial da Saúde</a>
+      </p>
     </div>
   </div>
 </div>
