fix base url, added services

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@ permalink: /
     <div class="row">
       <div id="servicos" class="section-title">
         <h2>Serviços</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
     <div class="row-fluid">
@@ -79,135 +78,39 @@ permalink: /
         <div class="service-item">
           <i class="ion-android-contacts"></i>
           <h4>Nutrição Infantil e Ambiente Escolar</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Atendimento a bebês, crianças e adolescentes. Introdução alimentar, adequação nutricional na infância e adolescência e tratamento de patologias específicas. Atuação em escolas através palestras, educação nutricional em salas de aula e consultoria para adequação da alimentação escolar.</p>
         </div>
       </div>
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
           <i class="ion-ios-people"></i>
           <h4>Adequação Nutricional Adulto e Idoso</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Avaliação e orientação nutricional para adultos e idosos. Elaboração de planos alimentares conforme necessidades específicas. Identificação de hábitos alimentares inadequados e seus gatilhos.
+          </p>
         </div>
       </div>
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
           <i class="ion-ios-pulse"></i>
           <h4>Nutrição Clínica</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Atuação nas mais diversas situações clínicas, desde obesidade e dislipidemia até doença cardiovascular estabelecida, diabetes, doença renal, hepatopatia e doenças intestinais.
+          </p>
         </div>
       </div>
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
           <i class="ion-ios-home"></i>
           <h4>Instituição de cuidado ao idoso</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p>Atendimento a instituições de cuidado ao idoso através de avaliação nutricional, orientação nutricional para patologias associadas e acompanhamento de terapia nutricional oral e enteral.
+          </p>
         </div>
       </div>
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
           <i class="ion-ios-paper"></i>
           <h4>Textos e Palestras</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Call to action Start -->
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Content Start -->
-<section id="testimonial">
-  <div class="container">
-    <div class="row">
-      <div class="section-title text-center">
-        <h2>Fun Facts About Us</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="block">
-          <ul class="counter-box clearfix">
-            <li>
-              <div class="block">
-                <i class="ion-ios-chatboxes-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
-              </div>
-            </li>
-            <li>
-              <div class="block">
-                <i class="ion-ios-glasses-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
-              </div>
-            </li>
-            <li>
-              <div class="block">
-                <i class="ion-ios-compose-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
-              </div>
-            </li>
-            <li>
-              <div class="block">
-                <i class="ion-ios-timer-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
-              </div>
-            </li>
-
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="testimonial-carousel">
-          <div id="testimonial-slider" class="owl-carousel">
-            <div>
-                <img src="img/cotation.png" alt="IMG">
-                <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-                <div class="user">
-                  <img src="img/item-img1.jpg" alt="Pepole">
-                  <p><span>Rose Ray</span> CEO-Themefisher</p>
-                </div>
-            </div>
-            <div>
-              <img src="img/cotation.png" alt="IMG">
-                <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-                <div class="user">
-                  <img src="img/item-img1.jpg" alt="Pepole">
-                  <p><span>Rose Ray</span> CEO-Themefisher</p>
-                </div>
-            </div>
-            <div>
-              <img src="img/cotation.png" alt="IMG">
-                <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-                <div class="user">
-                  <img src="img/item-img1.jpg" alt="Pepole">
-                  <p><span>Rose Ray</span> CEO-Themefisher</p>
-                </div>
-            </div>
-            <div>
-              <img src="img/cotation.png" alt="IMG">
-                <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-                <div class="user">
-                  <img src="img/item-img1.jpg" alt="Pepole">
-                  <p><span>Rose Ray</span> CEO-Themefisher</p>
-                </div>
-            </div>
-          </div>
+          <p>Elaboração de textos e palestras para diferentes locais e situações.
+          </p>
         </div>
       </div>
     </div>
