updated contact form

--- a/index.html
+++ b/index.html
@@ -116,3 +116,52 @@ permalink: /
     </div>
   </div>
 </section>
+<section id="contact-form">
+  <div class="container">
+    <!-- <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <div class="block">
+          <form>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Your Name">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Subject">
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <div class="block">
+          <form>
+            <div class="form-group-2">
+              <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
+            </div>
+            <button class="btn btn-default" type="submit">Send Message</button>
+          </form>
+        </div>
+      </div>
+    </div> -->
+    <div id="contact-box" class="row">
+      <div class="col-md-6 col-sm-12">
+        <div class="block">
+          <h2 id="contato">Agende Sua Consulta</h2>
+          <ul class="address-block">
+            <li>
+              <i class="fa fa-map-marker"></i>Belo Horizonte, Minas Gerais
+            </li>
+            <li>
+              <i class="fa fa-envelope-o"></i>Email: <a href="mailto:isis.nutri@gmail.com">isis.nutri@gmail.com</a>
+            </li>
+            <li>
+              <i class="fa fa-phone"></i>Telefone: <strong>(31) 99256-6801</strong>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
