--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ permalink: /
               <i class="fa fa-map-marker"></i>Belo Horizonte, Minas Gerais
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: <a href="mailto:isis.nutri@gmail.com?subject=Do site isistande.com">isis.nutri@gmail.com</a>
+              <i class="fa fa-envelope-o"></i>Email: <a href="mailto:isisnutri@gmail.com?subject=Do site isistande.com">isis.nutri@gmail.com</a>
             </li>
             <li>
               <i class="fa fa-phone"></i>Telefone: <strong>(31) 99256-6801</strong>
