--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ permalink: /
         <div class="service-item">
           <i class="ion-android-contacts"></i>
           <h4>Nutrição Infantil e Ambiente Escolar</h4>
-          <p>Atendimento a bebês, crianças e adolescentes. Introdução alimentar, adequação nutricional na infância e adolescência e tratamento de patologias específicas. Atuação em escolas através palestras, educação nutricional em salas de aula e consultoria para adequação da alimentação escolar.</p>
+          <p>Introdução alimentar, adequação nutricional na infância e adolescência e tratamento de patologias específicas. Atuação em escolas através palestras e educação nutricional.</p>
         </div>
       </div>
       <div class="col-sm-2 col-md-2">
@@ -100,8 +100,8 @@ permalink: /
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
           <i class="ion-ios-home"></i>
-          <h4>Instituição de cuidado ao idoso</h4>
-          <p>Atendimento a instituições de cuidado ao idoso através de avaliação nutricional, orientação nutricional para patologias associadas e acompanhamento de terapia nutricional oral e enteral.
+          <h4>Gestação</h4>
+          <p>Orientações nutricionais para que a gestação transcorra em plenitude, amenizando os sintomas adversos e contribuindo para o crescimento saudável do bebê.
           </p>
         </div>
       </div>
