--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ permalink: /
       </div>
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
-          <i class="ion-ios-home"></i>
+          <i class="ion-woman"></i>
           <h4>Gestação</h4>
           <p>Orientações nutricionais para que a gestação transcorra em plenitude, amenizando os sintomas adversos e contribuindo para o crescimento saudável do bebê.
           </p>
