--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ permalink: /
               <i class="fa fa-envelope-o"></i>Email: <a href="mailto:isisnutri@gmail.com?subject=Do site isistande.com">isisnutri@gmail.com</a>
             </li>
             <li>
-              <i class="fa fa-phone"></i>Telefone: <strong>(31) 99256-6801</strong>
+              <i class="fa fa-phone"></i>Telefone: <strong>(31) 987285082</strong>
             </li>
           </ul>
         </div>
