--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@ permalink: /
       <div class="col-sm-2 col-md-2 col-md-offset-1">
         <div class="service-item">
           <i class="ion-android-contacts"></i>
-          <h4>Nutrição Infantil e Ambiente Escolar</h4>
-          <p>Introdução alimentar, adequação nutricional na infância e adolescência e tratamento de patologias específicas. Atuação em escolas através palestras e educação nutricional.</p>
+          <h4>Nutrição na Infância e Adolescência</h4>
+          <p>Introdução alimentar, adequação nutricional na infância e adolescência e tratamento de patologias específicas. </p>
         </div>
       </div>
       <div class="col-sm-2 col-md-2">
         <div class="service-item">
           <i class="ion-ios-people"></i>
           <h4>Adequação Nutricional Adulto e Idoso</h4>
-          <p>Avaliação e orientação nutricional para adultos e idosos. Elaboração de planos alimentares conforme necessidades específicas. Identificação de hábitos alimentares inadequados e seus gatilhos.
+          <p>Avaliação e orientação nutricional para adultos e idosos. Elaboração de planos alimentares conforme necessidades específicas. 
           </p>
         </div>
       </div>
@@ -93,7 +93,7 @@ permalink: /
         <div class="service-item">
           <i class="ion-ios-pulse"></i>
           <h4>Nutrição Clínica</h4>
-          <p>Atuação nas mais diversas situações clínicas, desde obesidade e dislipidemia até doença cardiovascular estabelecida, diabetes, doença renal, hepatopatia e doenças intestinais.
+          <p>Atuação nas mais diversas situações clínicas, desde obesidade e dislipidemia até doença cardiovascular, diabetes e doença renal.
           </p>
         </div>
       </div>
@@ -101,19 +101,11 @@ permalink: /
         <div class="service-item">
           <i class="ion-woman"></i>
           <h4>Gestação</h4>
-          <p>Orientações nutricionais para que a gestação transcorra em plenitude, amenizando os sintomas adversos e contribuindo para o crescimento saudável do bebê.
+          <p>Orientações nutricionais para uma boa evolução da gestação, amenizando os sintomas adversos e contribuindo para o crescimento saudável do bebê.
           </p>
         </div>
       </div>
-      <div class="col-sm-2 col-md-2">
-        <div class="service-item">
-          <i class="ion-ios-paper"></i>
-          <h4>Textos e Palestras</h4>
-          <p>Elaboração de textos e palestras para diferentes locais e situações.
-          </p>
-        </div>
-      </div>
-    </div>
+     </div>
   </div>
 </section>
 <section id="contact-form">
